# product-school-scraper

./: .gitignore  README.md  pyproject.toml
product_school_scraper/: cli.py  main.py
product_school_scraper/database/: sqlite_handler.py
product_school_scraper/factories/: db_factory.py
product_school_scraper/parsing/: sitemap_parser.py
product_school_scraper/services/: cleaning_service.py  database_service.py  estimate_service.py  scraping_service.py  verification_service.py
product_school_scraper/utils/: helper.py  logger.py
tests/: conftest.py  test_cleaning_service.py  test_cli.py  test_database.py  test_database_service.py  test_db_factory.py  test_estimate_service.py  test_helper.py  test_main.py  test_scraping_service.py  test_sitemap_parser.py  test_verification_service.py
