[tool.poetry]
name = "product-school-scraper"
version = "0.1.0"
description = ""
authors = ["Felipe Strefling <felipe@lux18.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fire = "^0.7.0"
beautifulsoup4 = "^4.12.3"
pdfkit = "^1.0.0"
colorlog = "^6.9.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pypdf = "^5.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
product-school-scraper = "product_school_scraper.main:main"

[tool.ruff]
# Line length and indentation
line-length = 88
indent-width = 4

# Python target version
target-version = "py312"

# Files to exclude
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "dist",
]

[tool.ruff.lint]
# Enable all rules by default, except the ones that conflict with formatter
select = ["ALL"]
ignore = [
    "D",        # Ignore docstring rules (optional)
    "ANN",      # Ignore type annotation rules (optional)
    "ERA",      # Ignore eradicate rules (commented-out code)
    "COM812",   # Trailing comma missing
    "ISC001",   # Single line implicit string concatenation
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic numbers in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"